--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           />
           <blockquote class="image-quote">
             <hr></hr>
-            <p></p>
+            <p class="quote">The millions of people who are learning to code through freeCodeCamp will have an even better resource to help them learn these fundamentals.</p>
             <hr></hr>
           </blockquote>
           <img
